<resources>
    <string name="app_name">Keeper</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="login">Login</string>
    <string name="create">Create Account</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
<<<<<<< HEAD
    <string name="tournaments">Tournaments</string>
    <string name="teams">Teams</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_tournaments">TournamentsActivity</string>
    <string name="title_activity_teams">TeamsActivity</string>
    <string name="title_activity_create_new_tournament">CreateNewTournamentActivity</string>
    <string name="Return">Return</string>
    <string name="title_activity_view_tournament">ViewTournamentActivity</string>
    <string name="new_tournament">New Tournament</string>
    <string name="enter_tournament_name">Enter Tournament Name:</string>
    <string name="select_tournament_type">Select Tournament Type:</string>
    <string name="cancel">Cancel</string>
    <string name="create_tournament">Create Tournament</string>
    <string name="round_robin">Round Robin</string>
    <string name="knockout">Knockout</string>
    <string name="combination">Round Robin and Knockout Combination</string>
    <string name="tounament_name">Tournament Name</string>
    <string name="start_tournament">Start Tournament</string>
    <string name="current_teams">Current Teams</string>
=======
    <string name="successfully_loggedin">You have been logged in successfully!</string>
    <string name="logout">Logout</string>
    <string name="error_loading_name">Error loading profile!</string>
    <string name="avatar_selection">Select avatar</string>
    <string name="save_profile">Save Profile</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="jerseyNumber">Jersey Number</string>
    <string name="chooseDisplayPic">chooseDisplayPic</string>
    <string name="TeamName">Team Name</string>
    <string name="CreateTeam">Create Team</string>
    <string name="cancel">Cancel</string>
    <string name="Teams">Teams</string>

>>>>>>> f516553b198c2caa136a03c9748f3e37b3fd312f
</resources>
