<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tempname.keeper.activities.CreateNewTournamentActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_tournament"
        android:id="@+id/textView3"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enter_tournament_name"
        android:id="@+id/textView4"
        android:layout_marginTop="120dp"
        android:layout_alignParentStart="false" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TournamentName"
        android:layout_marginTop="150dp"
        android:hint="@string/tounament_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/select_tournament_type"
        android:id="@+id/textView5"
        android:layout_marginTop="220dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/round_robin"
            android:id="@+id/RoundRobin"
            android:checked="false"
            android:onClick="selectType" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/knockout"
            android:id="@+id/Knockout"
            android:checked="false"
            android:onClick="selectType" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/combination"
            android:id="@+id/Combination"
            android:checked="false"
            android:onClick="selectType" />

    </RadioGroup>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/create_tournament"
        android:id="@+id/Create"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="400dp"
        android:onClick="createNewTournament"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/Cancel"
        android:layout_gravity="center_horizontal"
        android:onClick="returnToPrevious"
        android:layout_marginTop="450dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
