<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.CreateAccountActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameInput"
        android:hint="@string/username"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:ems="10"
        android:id="@+id/passwordInput"
        android:layout_below="@+id/usernameInput"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/usernameInput" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/firstname"
        android:ems="10"
        android:id="@+id/firstNameInput"
        android:layout_below="@+id/passwordInput"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/passwordInput" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lastNameInput"
        android:layout_below="@+id/firstNameInput"
        android:layout_alignEnd="@+id/firstNameInput"
        android:layout_alignParentStart="true"
        android:hint="@string/lastname" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/createAccountButton"
        android:layout_below="@+id/lastNameInput"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/lastNameInput"
        android:onClick="createAccount"/>
</RelativeLayout>
