<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tempname.keeper.activities.TournamentsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tournaments"
        android:id="@+id/Tournaments"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true" />

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:id="@+id/TournamentList"
        android:layout_marginTop="110dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/new_tournament"
        android:id="@+id/NewTournament"
        android:layout_marginTop="400dp"
        android:layout_gravity="center_horizontal"
        android:onClick="newTournament"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Return"
        android:id="@+id/Return"
        android:layout_gravity="bottom|center_horizontal"
        android:onClick="returnToPrevious"
        android:layout_marginTop="450dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
