<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.tempname.keeper.activities.NewTeamActivity"
    tools:showIn="@layout/activity_new_team">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/displayPicture"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:longClickable="true"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_gallery"
            android:onClick="OnSetAvatarButton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/TeamName"
            android:id="@+id/teamNameText"
            android:layout_gravity="center"
            android:layout_marginTop="25dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teamName"
            android:layout_gravity="center"
            android:hint="(enter your team name)" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CreateTeam"
            android:id="@+id/createTeam"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:onClick="createTeam" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancel"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:onClick="OnCancel" />

    </LinearLayout>

</RelativeLayout>
